syntax = "proto3";

package hawk;

option java_package = "hawk";
option java_outer_classname = "Users";

import "google/protobuf/empty.proto";


message UserDetails{
  string name = 2;
  string description = 3;
}

message User{
  int64 id = 1;
  UserDetails details = 2;
}

message AddUserRequest {
  UserDetails userDetails = 1;
}

message AddUserResponse {
  User user = 1;
}


message GetUsersResponse {
  repeated User user = 1;
}

message GetUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

service UserService {
  rpc AddUser(AddUserRequest) returns (AddUserResponse) {
  }
  rpc GetUsers(google.protobuf.Empty) returns (GetUsersResponse){
  }
  rpc GetUser(GetUserRequest) returns (GetUserResponse){
  }
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty){
  }
}